--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 db_connection_string="postgresql+asyncpg://admin:admin@localhost:5432/mental_health"
-log_db=1
+log_db=0
+google_api_key="AIzaSyBCM1KqxAvW-u6f-Wr1DCh1fbmHfnu6pJ8"
