--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ sqlalchemy = "^2.0.45"
 asyncpg = "^0.31.0"
 uvicorn = "^0.40.0"
 python-dotenv = "^1.2.1"
+google-genai = "^1.57.0"
+types-pyyaml = "^6.0.12.20250915"
 
 
 [tool.poetry.group.tests.dependencies]
