--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ python-dotenv = "^1.2.1"
 google-genai = "^1.57.0"
 
 
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "session"
+
 [tool.poetry.group.tests.dependencies]
 pytest = "^9.0.2"
 pgmock = "^1.3.7"
@@ -25,6 +28,11 @@ pgmock = "^1.3.7"
 [tool.poetry.group.dev.dependencies]
 alembic = "^1.17.2"
 pre-commit = "^4.5.1"
+
+
+[tool.poetry.group.test.dependencies]
+testcontainers = "^4.14.0"
+pytest-asyncio = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
