--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,16 @@ services:
   db:
     image: postgres
     restart: unless-stopped
-    environment:
-      POSTGRES_PASSWORD: admin
-      POSTGRES_USER: admin
-      POSTGRES_DB: mental_health
+    env_file:
+      - .env
     ports:
       - "5432:5432"
 
   pgadmin:
     image: dpage/pgadmin4:9.11.0
     container_name: pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+    env_file:
+      - .env
     ports:
       - "8888:80"
     depends_on:
@@ -26,5 +23,9 @@ services:
   web:
     build: .
     restart: unless-stopped
+    depends_on:
+      - db
     ports:
       - "8000:8000"
+    env_file:
+      - .env
