--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   db:
-    image: postgres
+    image: postgres:18.1
     restart: unless-stopped
     env_file:
       - .env
