--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = "^3.14"
 fastapi = "^0.128.0"
 sqlalchemy = "^2.0.45"
 asyncpg = "^0.31.0"
 uvicorn = "^0.40.0"
 python-dotenv = "^1.2.1"
 google-genai = "^1.57.0"
+pydantic-settings = "^2.12.0"
 
 
 [tool.pytest.ini_options]
